--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,48 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import gdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/app/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Path of the current notebook\n",
-    "print(os.getcwd())"
+    "data_folder = \"data\"\n",
+    "\n",
+    "# Check whether the specified path exists or not\n",
+    "isExist = os.path.exists(data_folder)\n",
+    "if not isExist:\n",
+    "    # Create a new directory because it does not exist\n",
+    "    os.makedirs(data_folder)\n",
+    "    print(f\"New directory {data_folder} created!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy\n",
+      "To: /app/src/data/spam_ham_dataset.csv\n",
+      "100%|██████████| 5.50M/5.50M [00:00<00:00, 50.7MB/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/spam_ham_dataset.csv'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Hello new\n",
-    "%conda list | grep prefect > hool.txt"
+    "gdown.download( url=\"https://drive.google.com/file/d/1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy/view?usp=sharing\",\n",
+    "                output=\"data/spam_ham_dataset.csv\", quiet=False, fuzzy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>label</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>605</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Subject: enron methanol ; meter # : 988291\\r\\n...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2349</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Subject: hpl nom for january 9 , 2001\\r\\n( see...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3624</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Subject: neon retreat\\r\\nho ho ho , we ' re ar...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4685</td>\n",
+       "      <td>spam</td>\n",
+       "      <td>Subject: photoshop , windows , office . cheap ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Subject: re : indian springs\\r\\nthis deal is t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 label                                               text  \\\n",
+       "0         605   ham  Subject: enron methanol ; meter # : 988291\\r\\n...   \n",
+       "1        2349   ham  Subject: hpl nom for january 9 , 2001\\r\\n( see...   \n",
+       "2        3624   ham  Subject: neon retreat\\r\\nho ho ho , we ' re ar...   \n",
+       "3        4685  spam  Subject: photoshop , windows , office . cheap ...   \n",
+       "4        2030   ham  Subject: re : indian springs\\r\\nthis deal is t...   \n",
+       "\n",
+       "   label_num  \n",
+       "0          0  \n",
+       "1          0  \n",
+       "2          0  \n",
+       "3          1  \n",
+       "4          0  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv(\"data/spam_ham_dataset.csv\")\n",
+    "data.head()"
    ]
   },
   {
