--- a/src/SpamEmailDraft.ipynb
+++ b/src/SpamEmailDraft.ipynb
@@ -29,8 +29,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import nltk\n",
+    "from textblob import Word\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, mean_squared_error\n",
+    "\n",
     "nltk.download('stopwords')\n",
-    "from nltk.corpus import stopwords"
+    "nltk.download('wordnet')"
    ]
   },
   {
@@ -82,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Exploration"
+    "## Data Exploration\n",
+    "In this section, we will explore the dataset to get a better understanding of the data."
    ]
   },
   {
@@ -181,6 +190,42 @@
    "source": [
     "df = pd.read_csv('data/spam_emails_1.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5171 entries, 0 to 5170\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   label   5171 non-null   int64 \n",
+      " 1   text    5171 non-null   object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 80.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset contains 5, 171 emails. Each email has the following attributes:\n",
+    "\n",
+    "- `text`: The text of the email\n",
+    "- `label`: The label of the email. `1` means the email is spam, `0` means the email is not spam."
    ]
   },
   {
@@ -345,6 +390,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3672\n",
+       "1    1499\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -381,7 +448,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "`NOTE`: The distribution of the labels is not balanced. There are 3672 non-spam emails and 1499 spam emails."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing\n",
+    "In this section, we will preprocess the data to make it ready for training.\n",
+    "\n",
+    "We will perform the following preprocessing steps:\n",
+    "- Remove punctuation\n",
+    "- Convert the text to lowercase\n",
+    "- Remove stopwords\n",
+    "- Remove common words\n",
+    "- Remove rare words\n",
+    "- lemmatize the text"
    ]
   },
   {
@@ -794,7 +878,7 @@
     "freq = pd.Series(' '.join(df['text']).split()).value_counts()[-10:]\n",
     "freq = list(freq.index)\n",
     "df['text'] = df['text'].apply(lambda x: \" \".join(x for x in x.split() if x not in freq))\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -880,15 +964,13 @@
    ],
    "source": [
     "# lemmatization\n",
-    "from textblob import Word\n",
-    "nltk.download('wordnet')\n",
     "df['text'] = df['text'].apply(lambda x: \" \".join([Word(word).lemmatize() for word in x.split()]))\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +979,7 @@
        "'methanol meter 988291 follow note gave monday 4 00 preliminary flow data provided daren override pop daily volume presently zero reflect daily activity obtain control change needed asap economics purpose'"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +994,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering"
+    "## Feature Engineering\n",
+    "In this section, we will create features from the preprocessed text.\n",
+    "\n",
+    "We will perform the following feature engineering steps:\n",
+    "- Vectorize the text using TF-IDF"
    ]
   },
   {
@@ -943,8 +1029,6 @@
    "outputs": [],
    "source": [
     "# vectorize the text\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
     "tfidf = TfidfVectorizer(max_features=1000, lowercase=True, analyzer='word', stop_words= 'english',ngram_range=(1,1))\n",
     "tfidf.fit(df['text'])\n",
     "\n",
@@ -972,14 +1056,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Splitting the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (4136, 1000)\n",
+      "y_train shape: (4136,)\n",
+      "X_test shape: (1035, 1000)\n",
+      "y_test shape: (1035,)\n"
+     ]
+    }
+   ],
    "source": [
     "# split the data into train and test\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "print(f\"X_train shape: {X_train.shape}\")\n",
+    "print(f\"y_train shape: {y_train.shape}\")\n",
+    "print(f\"X_test shape: {X_test.shape}\")\n",
+    "print(f\"y_test shape: {y_test.shape}\")\n"
    ]
   },
   {
@@ -987,32 +1093,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Building"
+    "## Model Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "MultinomialNB()"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# train the model\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "clf = MultinomialNB()\n",
+    "clf = MultinomialNB( alpha=1.0, fit_prior=True, class_prior=None)\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -1026,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,18 +1141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "# show the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
     "confusion = confusion_matrix(y_test, y_pred)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1160,7 @@
        "Text(0.5, 1.0, 'Confusion Matrix')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1081,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1102,13 +1206,12 @@
    ],
    "source": [
     "# show the classification report\n",
-    "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1117,20 +1220,19 @@
        "92.3671497584541"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# accuracy score in %\n",
-    "from sklearn.metrics import accuracy_score\n",
     "accuracy_score(y_test, y_pred) * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1139,16 +1241,13 @@
        "0.27627613435738335"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# rmse score\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt\n",
-    "\n",
     "rms = sqrt(mean_squared_error(y_test, y_pred))\n",
     "rms"
    ]
