--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,54 +12,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_folder = \"data\"\n",
+    "# data_folder = \"data\"\n",
     "\n",
-    "# Check whether the specified path exists or not\n",
-    "isExist = os.path.exists(data_folder)\n",
-    "if not isExist:\n",
-    "    # Create a new directory because it does not exist\n",
-    "    os.makedirs(data_folder)\n",
-    "    print(f\"New directory {data_folder} created!\")"
+    "# # Check whether the specified path exists or not\n",
+    "# isExist = os.path.exists(data_folder)\n",
+    "# if not isExist:\n",
+    "#     # Create a new directory because it does not exist\n",
+    "#     os.makedirs(data_folder)\n",
+    "#     print(f\"New directory {data_folder} created!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy\n",
-      "To: /app/src/data/spam_ham_dataset.csv\n",
-      "100%|██████████| 5.50M/5.50M [00:00<00:00, 50.7MB/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/spam_ham_dataset.csv'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdown.download( url=\"https://drive.google.com/file/d/1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy/view?usp=sharing\",\n",
-    "                output=\"data/spam_ham_dataset.csv\", quiet=False, fuzzy=True)"
+    "# gdown.download( url=\"https://drive.google.com/file/d/1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy/view?usp=sharing\",\n",
+    "                # output=\"data/spam_ham_dataset.csv\", quiet=False, fuzzy=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import utils\n",
+    "from preprocessing import preprocess_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.download_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +144,38 @@
        "4          0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv(\"data/spam_ham_dataset.csv\")\n",
-    "data.head()"
+    "df = pd.read_csv(utils.output)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'drop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[39m=\u001b[39m preprocess_data(df)\n\u001b[1;32m      2\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m/app/src/preprocessing.py:18\u001b[0m, in \u001b[0;36mpreprocess_data\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpreprocess_data\u001b[39m(df : pd\u001b[39m.\u001b[39mDataFrame) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[0;32m---> 18\u001b[0m     df \u001b[39m=\u001b[39m clean_data(df)\n\u001b[1;32m     19\u001b[0m     nltk\u001b[39m.\u001b[39mdownload(\u001b[39m'\u001b[39m\u001b[39mstopwords\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     20\u001b[0m     nltk\u001b[39m.\u001b[39mdownload(\u001b[39m'\u001b[39m\u001b[39mwordnet\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m/app/src/preprocessing.py:12\u001b[0m, in \u001b[0;36mclean_data\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mclean_data\u001b[39m(df : pd\u001b[39m.\u001b[39mDataFrame) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame:\n\u001b[1;32m     11\u001b[0m     df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mdrop(\u001b[39m'\u001b[39m\u001b[39mUnnamed: 0\u001b[39m\u001b[39m'\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m---> 12\u001b[0m     df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mdrop(\u001b[39m'\u001b[39m\u001b[39mlabel_num\u001b[39m\u001b[39m'\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     13\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmap(label)\n\u001b[1;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m df\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'drop'"
+     ]
+    }
+   ],
+   "source": [
+    "df = preprocess_data(df)\n",
+    "df.head()"
    ]
   },
   {
