--- a/src/SpamEmailDraft.ipynb
+++ b/src/SpamEmailDraft.ipynb
@@ -229,6 +229,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
