setup great expectation

--- a/src/SpamEmailDraft.ipynb
+++ b/src/SpamEmailDraft.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,8 +18,20 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +73,7 @@
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1wtogytIpZC74Tq6s1GWaPWY3VBhmOrJy\n",
       "To: /app/src/data/spam_emails_1.csv\n",
-      "100%|██████████| 5.50M/5.50M [00:00<00:00, 39.5MB/s]\n"
+      "100%|██████████| 5.50M/5.50M [00:00<00:00, 56.3MB/s]\n"
      ]
     },
     {
@@ -70,7 +82,7 @@
        "'data/spam_emails_1.csv'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,6 +95,23 @@
     "output = \"data/spam_emails_1.csv\"\n",
     "\n",
     "gdown.download(url, output, quiet=False , fuzzy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip list | grep greate-expectations"
    ]
   },
   {
