update draft notebook

--- a/src/SpamEmailDraft.ipynb
+++ b/src/SpamEmailDraft.ipynb
@@ -10,30 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import gdown\n",
@@ -47,7 +26,15 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, mean_squared_error\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, mean_squared_error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')"
@@ -115,6 +102,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ruamel.yaml import YAML\n",
+    "import great_expectations as gx\n",
+    "from pprint import pprint\n",
+    "\n",
+    "yaml = YAML()\n",
+    "context = gx.get_context()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['spam_emails_1.csv.warning']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.list_expectation_suite_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ccf34d095424bd3b3b459eebba79d57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculating Metrics:   0%|          | 0/47 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bad pipe message: %s [b'\"Microsoft Edge\";v=\"111\", \"Not(A:Brand\";v=\"8\", \"Chromium\"']\n",
+      "Bad pipe message: %s [b'=\"111\"\\r\\nsec-ch-ua-mobile: ?0\\r\\nsec-ch-ua-platform: \"Windows']\n",
+      "Bad pipe message: %s [b'\\nUpgrade-Insecure-Requests: 1\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36 Edg/111.0.1661.44\\r\\nAccept: te']\n",
+      "Bad pipe message: %s [b'/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.']\n",
+      "Bad pipe message: %s [b'\\nSec-Fetch-Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-F', b'ch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gzip, deflate, br\\r\\nAccept-Language: en-GB,en']\n",
+      "Bad pipe message: %s [b'=0.9,en-US;q=0.8,fr;q=0.7\\r\\nCookie: username-127-0-0-1-8888', b'2|1:0|10:1679004554|23:username-127-0-0-1-8888|200:eyJ1c2Vyb']\n",
+      "Bad pipe message: %s [b'tZSI6ICJlNDU0NmY5MjhlNTg0MmVjOTA5NTg1ZWM4MjgzM2MwMSIsICJuYW1lIjogIkFub255bW91cyBQYXNpcGhhZSIsICJkaXNwbGF5X25']\n",
+      "Bad pipe message: %s [b'WUiOiAiQW5vbnltb3VzIFBhc2lwaGFlIiwgImluaXRpYWxzIjogIkFQIiwgImNvbG9yIjogbnVsbH0=|f827bbe2f304950850253cc']\n",
+      "Bad pipe message: %s [b'0f2cc7b0ed0776e77158c28c4e13a21eeb2c4c6\"; _xsrf=2|4e15a91f|9540238e6f74e7fd57aed7e4ed307377|16791', b'066; username-127-0-0-1-8890=\"2|1:0|10:1679135714|', b':username-127-0-0-1-8890|44:MTRiYzAzZTBiYTJlNDllM', b'4MGViNjQzNmRlODIyYTA=|4a7b8e62a80d80ff40fc1d89b945cccfac966a36f2fd9', b'4baa8c822efeb80d9\"; username-127-0-0-1-8889=\"2|1:0|10:', b'79136463|23:username-127-0-0-1-8889|44:MzYxNjQ1M']\n",
+      "Bad pipe message: %s [b'ol: max-age=0\\r\\nsec-ch-ua: \"Microsoft Edge\";v=\"111\", \"Not(A:Brand\";v=\"8\", \"Chromium\";v=\"111\"\\r\\nsec-ch-ua-mobile: ?0\\r\\n']\n",
+      "Bad pipe message: %s [b'c-ch-ua-platform: \"Windows\"\\r\\nUpgrade-Insecure-Requests: 1\\r\\nUser-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) A', b'leWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36 Edg/111.0.1661.44\\r\\nAccept: text/html,applica']\n",
+      "Bad pipe message: %s [b'on/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nSec-Fetc', b'Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-Fetch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gz', b', deflate, br\\r\\nAccept-Language: en-GB,en;q=0.9,en-US;q=0.8,fr;q=0.7\\r\\nCookie: username-127-0-0-1-8888=\"2|']\n",
+      "Bad pipe message: %s [b'0|10:1679004554|23:username-127-0-0-1-8888|200:e']\n",
+      "Bad pipe message: %s [b'1c2VybmFtZSI6ICJlNDU0NmY5MjhlNTg0MmVjOTA5NTg1ZWM4MjgzM2MwMSIsICJuYW1lIjogIkFub255bW91cyBQYXNpcGhhZSIsICJkaXNwbGF5X25hbWU']\n",
+      "Bad pipe message: %s [b'iAiQW5vbnltb3VzIFBhc2lwaGFlIiwgImluaXRpYWxzIjogIkFQIiwgImNvbG9yIjogbnVsbH0=|f827bbe2f304950850253ccb50f2', b'7b0ed0776e77158c28c4e13a21eeb2c4c6\"; _xsrf=2|4e15a91f|9540238e6f74e7fd57aed7e4ed307377|1679135066;', b'sername-127-0-0-1-8890=\"2|1:0|1', b'1679135714|23:username-127-0-0-1-8890|44:MTRiYz']\n",
+      "Bad pipe message: %s [b'ZTBiYTJlNDllMDg4MGViNjQzNmRlODIyYTA=|4a7b8e62a80d80ff40fc1d89b94']\n",
+      "Bad pipe message: %s [b'ccfac966a36f2fd97a4baa8c822efeb80d9\"; username-127-0', b'-1-8889=\"2|1:0|10:1679136463|23:username-127']\n",
+      "Bad pipe message: %s [b'-0-1-8889|44:MzYxNjQ1MWU0MjFmNGM4YjkzZDdkYmM']\n",
+      "Bad pipe message: %s [b'ol: max-age=0\\r\\nsec-ch-ua: \"Microsoft Edge\";v=\"111\", \"Not(A:Brand\";v=\"8\", \"Chromium\";v=\"111\"\\r\\nsec-ch-ua-mobile: ?0\\r\\n']\n",
+      "Bad pipe message: %s [b'c-ch-ua-platform: \"Windows\"\\r\\nUpgrade-Insecure-Requests: 1\\r\\nUser-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) A', b'leWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36 Edg/111.0.1661.44\\r\\nAccept: text/html,applica']\n",
+      "Bad pipe message: %s [b'on/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nSec-Fetc', b'Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-Fetch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gz', b', deflate, br\\r\\nAccept-Language: en-GB,en;q=0.9,en-US;q=0.8,fr;q=0.7\\r\\nCookie: username-127-0-0-1-8888=\"2|']\n",
+      "Bad pipe message: %s [b'0|10:1679004554|23:username-127-0-0-1-8888|200:e']\n",
+      "Bad pipe message: %s [b'1c2VybmFtZSI6ICJlNDU0NmY5MjhlNTg0MmVjOTA5NTg1ZWM4MjgzM2MwMSIsICJuYW1lIjogIkFub255bW91cyBQYXNpcGhhZSIsICJkaXNwbGF5X25hbWU']\n",
+      "Bad pipe message: %s [b'iAiQW5vbnltb3VzIFBhc2lwaGFlIiwgImluaXRpYWxzIjogIkFQIiwgImNvbG9yIjogbnVsbH0=|f827bbe2f304950850253ccb50f2', b'7b0ed0776e77158c28c4e13a21eeb2c4c6\"; _xsrf=2|4e15a91f|9540238e6f74e7fd57aed7e4ed307377|1679135066;', b'sername-127-0-0-1-8890=\"2|1:0|1', b'1679135714|23:username-127-0-0-1-8890|44:MTRiYz']\n",
+      "Bad pipe message: %s [b'ZTBiYTJlNDllMDg4MGViNjQzNmRlODIyYTA=|4a7b8e62a80d80ff40fc1d89b94']\n",
+      "Bad pipe message: %s [b'ccfac966a36f2fd97a4baa8c822efeb80d9\"; username-127-0', b'-1-8889=\"2|1:0|10:1679136463|23:username-127']\n",
+      "Bad pipe message: %s [b'-0-1-8889|44:MzYxNjQ1MWU0MjFmNGM4YjkzZDdkYmM']\n",
+      "Bad pipe message: %s [b'\"Microsoft Edge\";v=\"111\", \"Not(A:Brand\";v=\"8\", \"Chromium\"']\n",
+      "Bad pipe message: %s [b'=\"111\"\\r\\nsec-ch-ua-mobile: ?0\\r\\nsec-ch-ua-platform: \"Windows']\n",
+      "Bad pipe message: %s [b'\\nUpgrade-Insecure-Requests: 1\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36 Edg/111.0.1661.44\\r\\nAccept: te']\n",
+      "Bad pipe message: %s [b'/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.']\n",
+      "Bad pipe message: %s [b'\\nSec-Fetch-Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-F', b'ch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gzip, deflate, br\\r\\nAccept-Language: en-GB,en']\n",
+      "Bad pipe message: %s [b'=0.9,en-US;q=0.8,fr;q=0.7\\r\\nCookie: username-127-0-0-1-8888', b'2|1:0|10:1679004554|23:username-127-0-0-1-8888|200:eyJ1c2Vyb']\n",
+      "Bad pipe message: %s [b'tZSI6ICJlNDU0NmY5MjhlNTg0MmVjOTA5NTg1ZWM4MjgzM2MwMSIsICJuYW1lIjogIkFub255bW91cyBQYXNpcGhhZSIsICJkaXNwbGF5X25']\n",
+      "Bad pipe message: %s [b'WUiOiAiQW5vbnltb3VzIFBhc2lwaGFlIiwgImluaXRpYWxzIjogIkFQIiwgImNvbG9yIjogbnVsbH0=|f827bbe2f304950850253cc']\n",
+      "Bad pipe message: %s [b'0f2cc7b0ed0776e77158c28c4e13a21eeb2c4c6\"; _xsrf=2|4e15a91f|9540238e6f74e7fd57aed7e4ed307377|16791', b'066; username-127-0-0-1-8890=\"2|1:0|10:1679135714|', b':username-127-0-0-1-8890|44:MTRiYzAzZTBiYTJlNDllM', b'4MGViNjQzNmRlODIyYTA=|4a7b8e62a80d80ff40fc1d89b945cccfac966a36f2fd9', b'4baa8c822efeb80d9\"; username-127-0-0-1-8889=\"2|1:0|10:', b'79136463|23:username-127-0-0-1-8889|44:MzYxNjQ1M']\n"
+     ]
+    }
+   ],
+   "source": [
+    "context.run_checkpoint(\"gx_checkpoint\")\n",
+    "context.open_data_docs()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -125,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,13 +301,14 @@
        "4          0  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data/spam_emails_1.csv')\n",
+    "from config import DATA_PATH\n",
+    "df = pd.read_csv(DATA_PATH)\n",
     "df.head()"
    ]
   },
